--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <title>Project Euler: Multiples of 5 and 3</title>
+    <title>Age Calculator</title>
   </head>
   <body>
 
